3. The final step of completing the user interface is to add in our bird. We will place the bird inside our game area, and we are using a pixel bird picture from the internet. - We use the CSS attribute `background: url(...)` to set the background of the bird div to be an image. - We then use the CSS attribute `background-size: contain` to make the background image scale as large as possible within its container without cropping or stretching the image. If the container is larger than the image, this will result in image tiling. - Thus we use the CSS attribute `background-repeat: no-repeat` to prevent image tiling. - By changing the `top` styled attribute, you can change the bird's up and down position relative to the game area, similar to how you change the pole's position with the `right` attribute.

--- a/style.css
+++ b/style.css
@@ -41,3 +41,14 @@
 #pole-2 {
     bottom: 0;
 }
+
+#bird {
+    position: absolute;
+    background: url("https://usercontent.one/wp/compucademy.net/wp-content/uploads/2020/11/robbybird.png?media=1647780690");
+    height: 27px;
+    width: 42px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    top: 20%;
+    left: 15%;
+}
